@@ -19,9 +19,10 @@ class ViewsAccessTest extends ViewsSqlTest {
     $this->admin_user = $this->drupalCreateUser(array('access all views'));
     $this->web_user = $this->drupalCreateUser();
     $this->web_role = current($this->web_user->roles);
+
+    $this->normal_role = $this->drupalCreateRole(array());
     $this->normal_user = $this->drupalCreateUser(array('views_test test permission'));
-    $roles = array_keys($this->normal_user->roles);
-    $this->normal_role = array_pop($roles);
+    $this->normal_user->roles[$this->normal_role] = $this->normal_role;
   }
 
   /**
